--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ sites/*/settings*.php
 # Ignore paths that contain user-generated content.
 sites/*/files
 sites/*/private
+
+# Ignore gui theme and modules
+sites/all/*/gui
+
+# drush config file
+sites/*/drushrc.php
