Do not ignore robinsonmod nor robinsontheme.

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,16 @@ sites/*/settings*.php
 sites/*/files
 sites/*/private
 
-# Ignore gui theme and modules
-sites/all/*/gui
+# Ignore gui themes and modules
+sites/all/modules/gui/contentsadminrelink
+sites/all/modules/gui/editmenu
+sites/all/modules/gui/selectList
+sites/all/modules/gui/tode
+sites/all/themes/gui/adaptivetheme_gui_admin
+sites/all/themes/gui/adaptivetheme_gui_starter
+sites/all/themes/gui/gui7
+sites/all/themes/gui/guibik
+sites/all/themes/gui/inigui
 
 # drush config file
 sites/*/drushrc.php
